# cpp-training

./: .gitignore  .gitmodules  Makefile_template  README.md  cleanup.ps1  cleanup.sh
book-cpp/Chapter06_DataTypes/: ex1_pointers.h  ex2_string.cpp  ex2_string.h  ex3_streams.h
book-cpp/Chapter07_Functions/: ex1_functonbodyAndVectors.cpp  ex1_functonbodyAndVectors.h  ex2_callByRefVal.cpp  ex2_callByRefVal.h  ex3_function_parameters.cpp
book-cpp/Chapter12_StructClass/: ex1_struct.cpp  ex1_struct.h  ex3_overloading.cpp  ex4_constructor.h  main.cpp
book-cpp/Chapter16_ClassLifecycle/: ex12_enum.cpp  ex12_enum.h  main.cpp
book-cpp/Chapter6_DataTypes/: Makefile  ex1_pointers.cpp  ex1_pointers.h  ex2_string.cpp  ex2_string.h  ex3_streams.cpp  ex3_streams.h  ex4_container.cpp  ex4_container.h  main.cpp
book-cpp/Chapter7_Functions/: ex1_functonbodyAndVectors.cpp  ex1_functonbodyAndVectors.h  ex2_callByRefVal.cpp  ex2_callByRefVal.h  ex3_overload.cpp  ex3_overload.h  ex4_parameters_default_various.cpp  ex4_parameters_default_various.h  main.cpp
cpp-2023/: NewFeatures.cc
cpp-book/: README.md
cpp-book/Chapter06_DataTypes/: ex1_pointers.cpp  ex3_streams.cpp  main.cpp
cpp-book/Chapter07_Functions/: Makefile  ex3_function_parameters.h  main.cpp
cpp-book/Chapter12_StructClass/: ex2_method.cpp  ex2_method.h  ex3_overloading.h  ex4_constructor.cpp
cpp-course/: README.md  empty-file-template.cc
cpp-course/Chapter01/CompilerCommands/: Makefile
cpp-course/Chapter01/Part1_Basics/: Makefile
cpp-course/Chapter01/Part2_VariablesAndConsole/: ExampleArea.cc
cpp-course/Chapter01/Part3_LoopsAndConditions/: ExampleConditions.cc  ExampleLeapYear.cc  TernaryOperator.cc
cpp-course/Chapter02/IncludeGuards/: Lib.cc  Lib.h  Main.cc  Types.h
cpp-course/Chapter03/: StructAndPointer.cc
cpp-course/Chapter04/: 01StructEnumSwitch.cc  02StructAndPointer.cc  03Auto.cc  04Namespace.cc
cpp-course/Chapter05-Vector/: 01Vector.cc  02SizeVsCapacity.cc  03VectorMethods.cc  04VectorMethods2.cc  05VectorSort.cc  06EraseRemove.cc  07RangedFor.cc  08StructuredBinding.cc  09_TypedefUsing.cc  10_MultiDimVector.cc  11_Template.cc
cpp-course/Chapter06-String/: 01_String.cc  02_String2.cc  03_String3.cc  04_String4.cc  05_FileIO.cc  06_FileIO2.cc  07_SSO.cc  08_StringViews.cc  09_FileSystem.cc  11_Binary.cc  output_file.txt
cpp-course/CodingProject1/: AlgoArray.cc  AlgoArray.h  DynArray.cc  DynArray.h  main.cc
cpp-course/Game2/: Game.cc  Game.hpp  Main.cc
cpp-course/Game4/: Game.cc  Game.hpp  Main.cc
cpp-course/GuessingGame/: Main.cc
cpp-course/Tools/: README.md
cpp-tooling/: Makefile Template  README.md
cpp-tooling/CMake/: README.md
cpp-tooling/CMake/02_BasicProject/: CMakeLists.txt
cpp-tooling/CMake/04_VariablesOptions/: CMakeLists.txt
cpp-tooling/CMake/04_VariablesOptions/app/: main.cc
cpp-tooling/CMake/04_VariablesOptions/src/my_lib/: CMakeLists.txt
cpp-tooling/CMake/07_Submodules/: CMakeLists.txt  README.md
cpp-tooling/CMake/07_Submodules/app/: main.cc
cpp-tooling/CMake/07_Submodules/configured/: CMakeLists.txt  config.hpp.in
cpp-tooling/CMake/07_Submodules/src/my_lib/: my_lib.cc
cpp-tooling/CMake/09_Doxygen/: CMakeLists.txt
cpp-tooling/CMake/09_Doxygen/app/: CMakeLists.txt
cpp-tooling/CMake/09_Doxygen/src/my_lib/: CMakeLists.txt  my_lib.h
udemy-cpp/: README.md  cleanup.ps1
udemy-cpp/Chapter03/: Struct.cc
udemy-cpp/Game1/: Main.cc
udemy-cpp/GuessingGame/: Game.cc  Main.cc
udemy-tooling/: README.md
udemy-tooling/CMake/: CleanupBuildFolder.sh  README.md
udemy-tooling/Makefile/: README.md
vscode-configuration/: README.md
(+118 files in other folders)
